xidlc/tests/snapshots/codegen_snapshot__axum__http_media_types.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
http_media_types.rs
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.

#[allow(
    non_snake_case,
    unused_attributes,
    unused_variables,
    unused_mut,
    unreachable_code,
    clippy::let_unit_value
)]
#[async_trait::async_trait]
pub trait HttpMediaService {
    async fn submit_form(
        &self,
        name: String,
        age: u32,
    ) -> ::xidl_rust_axum::Result<String>;
    async fn fetch_msgpack(&self, id: String) -> ::xidl_rust_axum::Result<String>;
}
#[allow(non_snake_case, unused_imports)]
pub(super) mod __xidl_in_HttpMediaService {
    use super::*;
}
#[allow(non_snake_case, unused_imports)]
pub(super) mod __xidl_out_HttpMediaService {
    use super::*;
}
#[derive(::serde::Serialize)]
pub struct HttpMediaServiceSubmitFormRequestOutBody {
    #[serde(default)]
    pub name: String,
    #[serde(default)]
    pub age: u32,
}
#[derive(::serde::Deserialize)]
pub struct HttpMediaServiceSubmitFormRequestInBody {
    pub name: String,
    pub age: u32,
}
#[derive(::serde::Deserialize)]
struct HttpMediaServiceSubmitFormRequest {
    name: String,
    age: u32,
}
#[allow(clippy::manual_async_fn, unused_mut)]
impl<S> ::xidl_rust_axum::axum::extract::FromRequest<S>
for HttpMediaServiceSubmitFormRequest
where
    S: Send + Sync,
{
    type Rejection = ::xidl_rust_axum::Error;
    fn from_request(
        req: ::xidl_rust_axum::axum::extract::Request,
        state: &S,
    ) -> impl ::core::future::Future<Output = Result<Self, Self::Rejection>> + Send {
        async move {
            let (mut parts, body) = req.into_parts();
            let _ = &body;
            let _ = state;
            let xidl_headers = &parts.headers;
            let _ = xidl_headers;
            if !::xidl_rust_axum::http::content_type_matches(
                xidl_headers,
                "application/x-www-form-urlencoded",
            ) {
                return Err(::xidl_rust_axum::Error::unsupported_media_type());
            }
            let xidl_body_bytes = ::xidl_rust_axum::axum::body::to_bytes(
                    body,
                    usize::MAX,
                )
                .await
                .map_err(|err| ::xidl_rust_axum::Error::new(400, format!("{err:?}")))?;
            let xidl_body: HttpMediaServiceSubmitFormRequestInBody = ::xidl_rust_axum::DeserializeFactory::new(
                    "application/x-www-form-urlencoded",
                )
                .from_slice(&xidl_body_bytes)?;
            let HttpMediaServiceSubmitFormRequestInBody { name, age } = xidl_body;
            Ok(Self { name, age })
        }
    }
}
#[derive(::serde::Serialize, ::core::default::Default)]
struct HttpMediaServiceFetchMsgpackRequestOutQuery {
    #[serde(default)]
    id: String,
}
#[derive(::serde::Deserialize, ::core::default::Default)]
struct HttpMediaServiceFetchMsgpackRequestInQuery {
    #[serde(default)]
    id: String,
}
#[derive(::serde::Deserialize)]
struct HttpMediaServiceFetchMsgpackRequest {
    id: String,
}
#[allow(clippy::manual_async_fn, unused_mut)]
impl<S> ::xidl_rust_axum::axum::extract::FromRequest<S>
for HttpMediaServiceFetchMsgpackRequest
where
    S: Send + Sync,
{
    type Rejection = ::xidl_rust_axum::Error;
    fn from_request(
        req: ::xidl_rust_axum::axum::extract::Request,
        state: &S,
    ) -> impl ::core::future::Future<Output = Result<Self, Self::Rejection>> + Send {
        async move {
            let (mut parts, body) = req.into_parts();
            let _ = &body;
            let _ = state;
            let ::xidl_rust_axum::axum::extract::Query(xidl_query) = <::xidl_rust_axum::axum::extract::Query<
                HttpMediaServiceFetchMsgpackRequestInQuery,
            > as ::xidl_rust_axum::axum::extract::FromRequestParts<
                S,
            >>::from_request_parts(&mut parts, state)
                .await
                .map_err(|err| ::xidl_rust_axum::Error::new(400, err.to_string()))?;
            let HttpMediaServiceFetchMsgpackRequestInQuery { id } = xidl_query;
            let xidl_headers = &parts.headers;
            let _ = xidl_headers;
            Ok(Self { id })
        }
    }
}
pub struct HttpMediaServiceServer<T> {
    inner: ::std::sync::Arc<T>,
}
#[allow(non_snake_case)]
impl<T> HttpMediaServiceServer<T>
where
    T: HttpMediaService + Send + Sync + 'static,
{
    pub fn new(inner: T) -> Self {
        Self {
            inner: ::std::sync::Arc::new(inner),
        }
    }
    pub fn from_arc(inner: ::std::sync::Arc<T>) -> Self {
        Self { inner }
    }
    pub fn router(self) -> xidl_rust_axum::axum::Router {
        let _svc = self.inner;
        xidl_rust_axum::axum::Router::new()
            .route(
                "/submit_form",
                xidl_rust_axum::axum::routing::post(Self::submit_form),
            )
            .route(
                "/fetch_msgpack",
                xidl_rust_axum::axum::routing::post(Self::fetch_msgpack),
            )
            .with_state(_svc)
    }
    #[allow(
        clippy::let_and_return,
        clippy::needless_return,
        clippy::useless_conversion,
        unused_mut,
        unreachable_code,
        clippy::let_unit_value,
        unused_variables
    )]
    async fn submit_form(
        ::xidl_rust_axum::axum::extract::State(
            svc,
        ): ::xidl_rust_axum::axum::extract::State<::std::sync::Arc<T>>,
        headers: ::xidl_rust_axum::axum::http::HeaderMap,
        uri: ::xidl_rust_axum::axum::http::Uri,
        request: HttpMediaServiceSubmitFormRequest,
    ) -> ::xidl_rust_axum::Result<::xidl_rust_axum::axum::response::Response> {
        let _ = &headers;
        if !xidl_rust_axum::http::accepts_media_type(&headers, "text/plain") {
            return Err(xidl_rust_axum::Error::not_acceptable());
        }
        let HttpMediaServiceSubmitFormRequest { name, age } = request;
        let name: String = name;
        let age: u32 = age;
        let mut resp = match svc.submit_form(name, age).await {
            Ok(resp_value) => {
                let mut resp = {
                    let body_value: String = resp_value;
                    let _ = &body_value;
                    let body = xidl_rust_axum::SerializeFactory::new("text/plain")
                        .to_vec(&body_value)?;
                    ::xidl_rust_axum::axum::response::Response::builder()
                        .status(
                            ::xidl_rust_axum::axum::http::StatusCode::from_u16(200)
                                .unwrap(),
                        )
                        .header(
                            ::xidl_rust_axum::axum::http::header::CONTENT_TYPE,
                            "text/plain",
                        )
                        .body(::xidl_rust_axum::axum::body::Body::from(body))
                        .map_err(|err| xidl_rust_axum::Error::new(
                            500,
                            format!("{err:?}"),
                        ))?
                };
                resp
            }
            Err(err) => {
                ::xidl_rust_axum::axum::response::IntoResponse::into_response(err)
            }
        };
        Ok(resp)
    }
    #[allow(
        clippy::let_and_return,
        clippy::needless_return,
        clippy::useless_conversion,
        unused_mut,
        unreachable_code,
        clippy::let_unit_value,
        unused_variables
    )]
    async fn fetch_msgpack(
        ::xidl_rust_axum::axum::extract::State(
            svc,
        ): ::xidl_rust_axum::axum::extract::State<::std::sync::Arc<T>>,
        headers: ::xidl_rust_axum::axum::http::HeaderMap,
        uri: ::xidl_rust_axum::axum::http::Uri,
        request: HttpMediaServiceFetchMsgpackRequest,
    ) -> ::xidl_rust_axum::Result<::xidl_rust_axum::axum::response::Response> {
        let _ = &headers;
        if !xidl_rust_axum::http::accepts_media_type(&headers, "application/msgpack") {
            return Err(xidl_rust_axum::Error::not_acceptable());
        }
        let HttpMediaServiceFetchMsgpackRequest { id } = request;
        let id: String = id;
        let mut resp = match svc.fetch_msgpack(id).await {
            Ok(resp_value) => {
                let mut resp = {
                    let body_value: String = resp_value;
                    let _ = &body_value;
                    let body = xidl_rust_axum::SerializeFactory::new(
                            "application/msgpack",
                        )
                        .to_vec(&body_value)?;
                    ::xidl_rust_axum::axum::response::Response::builder()
                        .status(
                            ::xidl_rust_axum::axum::http::StatusCode::from_u16(200)
                                .unwrap(),
                        )
                        .header(
                            ::xidl_rust_axum::axum::http::header::CONTENT_TYPE,
                            "application/msgpack",
                        )
                        .body(::xidl_rust_axum::axum::body::Body::from(body))
                        .map_err(|err| xidl_rust_axum::Error::new(
                            500,
                            format!("{err:?}"),
                        ))?
                };
                resp
            }
            Err(err) => {
                ::xidl_rust_axum::axum::response::IntoResponse::into_response(err)
            }
        };
        Ok(resp)
    }
}
impl<T> xidl_rust_axum::Service for HttpMediaServiceServer<T>
where
    T: HttpMediaService + Send + Sync + 'static,
{
    fn into_router(self) -> xidl_rust_axum::axum::Router {
        self.router()
    }
}
pub struct HttpMediaServiceClient {
    client: ::xidl_rust_axum::Client,
}
#[allow(non_snake_case)]
impl HttpMediaServiceClient {
    pub fn new(base_url: impl Into<String>) -> Self {
        Self {
            client: ::xidl_rust_axum::Client::new(base_url),
        }
    }
    pub fn with_http(
        base_url: impl Into<String>,
        http: ::xidl_rust_axum::reqwest::Client,
    ) -> Self {
        Self {
            client: ::xidl_rust_axum::Client::with_http(base_url, http),
        }
    }
}
#[allow(non_snake_case)]
impl HttpMediaServiceClient {
    #[allow(clippy::useless_conversion, unused_mut, unreachable_code, unused_variables)]
    pub async fn submit_form(
        &self,
        name: String,
        age: u32,
    ) -> Result<String, xidl_rust_axum::Error> {
        let path = "/submit_form".to_string();
        let mut req = self
            .client
            .http()
            .request(xidl_rust_axum::reqwest::Method::POST, self.client.url(&path))
            .build()
            .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
        req.headers_mut()
            .insert(
                xidl_rust_axum::reqwest::header::ACCEPT,
                xidl_rust_axum::reqwest::header::HeaderValue::from_str("text/plain")
                    .map_err(|err| xidl_rust_axum::Error::new(400, format!("{err:?}")))?,
            );
        let auth_target = &self.client;
        let _ = auth_target;
        let body = HttpMediaServiceSubmitFormRequestOutBody {
            name,
            age,
        };
        let body = xidl_rust_axum::SerializeFactory::new(
                "application/x-www-form-urlencoded",
            )
            .to_vec(&body)?;
        req.headers_mut()
            .insert(
                xidl_rust_axum::reqwest::header::CONTENT_TYPE,
                xidl_rust_axum::reqwest::header::HeaderValue::from_str(
                        "application/x-www-form-urlencoded",
                    )
                    .map_err(|err| xidl_rust_axum::Error::new(400, format!("{err:?}")))?,
            );
        *req.body_mut() = Some(xidl_rust_axum::reqwest::Body::from(body));
        let resp = self
            .client
            .http()
            .execute(req)
            .await
            .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
        if resp.status().is_success() {
            let body = resp
                .bytes()
                .await
                .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
            let body: String = xidl_rust_axum::DeserializeFactory::new("text/plain")
                .from_slice(&body)?;
            Ok(body)
        } else {
            let status = resp.status();
            let body = resp.json::<xidl_rust_axum::ErrorBody>().await.ok();
            Err(xidl_rust_axum::Error::from_http_response(status, body))
        }
    }
    #[allow(clippy::useless_conversion, unused_mut, unreachable_code, unused_variables)]
    pub async fn fetch_msgpack(
        &self,
        id: String,
    ) -> Result<String, xidl_rust_axum::Error> {
        let path = "/fetch_msgpack".to_string();
        let mut req = self
            .client
            .http()
            .request(xidl_rust_axum::reqwest::Method::POST, self.client.url(&path))
            .build()
            .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
        req.headers_mut()
            .insert(
                xidl_rust_axum::reqwest::header::ACCEPT,
                xidl_rust_axum::reqwest::header::HeaderValue::from_str(
                        "application/msgpack",
                    )
                    .map_err(|err| xidl_rust_axum::Error::new(400, format!("{err:?}")))?,
            );
        let query = HttpMediaServiceFetchMsgpackRequestOutQuery {
            id,
        };
        let query = xidl_rust_axum::serde_urlencoded::to_string(&query)
            .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
        if !query.is_empty() {
            req.url_mut().set_query(Some(&query));
        }
        let auth_target = &self.client;
        let _ = auth_target;
        let resp = self
            .client
            .http()
            .execute(req)
            .await
            .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
        if resp.status().is_success() {
            let body = resp
                .bytes()
                .await
                .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
            let body: String = xidl_rust_axum::DeserializeFactory::new(
                    "application/msgpack",
                )
                .from_slice(&body)?;
            Ok(body)
        } else {
            let status = resp.status();
            let body = resp.json::<xidl_rust_axum::ErrorBody>().await.ok();
            Err(xidl_rust_axum::Error::from_http_response(status, body))
        }
    }
}
