xidlc/tests/snapshots/codegen_snapshot__axum__http_module_types.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
http_module_types.rs
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.

pub mod demo {
    #[derive(Debug, Clone, PartialEq, ::serde::Serialize, ::serde::Deserialize)]
    #[derive(Default)]
    pub struct Point {
        pub x: i64,
        pub y: i64,
    }
    impl Point {}
    #[allow(
        non_snake_case,
        unused_attributes,
        unused_variables,
        unused_mut,
        unreachable_code,
        clippy::let_unit_value
    )]
    #[async_trait::async_trait]
    pub trait Things {
        async fn get_point(&self) -> ::xidl_rust_axum::Result<Point>;
        async fn get_point_by_id(
            &self,
            id: String,
            if_none_match: Option<String>,
        ) -> ::xidl_rust_axum::Result<Point>;
    }
    #[allow(non_snake_case, unused_imports)]
    pub(super) mod __xidl_in_Things {
        use super::*;
        #[derive(::serde::Serialize, ::serde::Deserialize)]
        pub struct demo_Point {
            pub x: i64,
            pub y: i64,
        }
        #[allow(unused_variables, unreachable_code)]
        impl From<super::Point> for demo_Point {
            fn from(value: super::Point) -> Self {
                Self { x: value.x, y: value.y }
            }
        }
        #[allow(unused_variables, unreachable_code)]
        impl From<demo_Point> for super::Point {
            fn from(value: demo_Point) -> Self {
                Self { x: value.x, y: value.y }
            }
        }
    }
    #[allow(non_snake_case, unused_imports)]
    pub(super) mod __xidl_out_Things {
        use super::*;
        #[derive(::serde::Serialize, ::serde::Deserialize)]
        pub struct demo_Point {
            pub x: i64,
            pub y: i64,
        }
        #[allow(unused_variables, unreachable_code)]
        impl From<super::Point> for demo_Point {
            fn from(value: super::Point) -> Self {
                Self { x: value.x, y: value.y }
            }
        }
        #[allow(unused_variables, unreachable_code)]
        impl From<demo_Point> for super::Point {
            fn from(value: demo_Point) -> Self {
                Self { x: value.x, y: value.y }
            }
        }
    }
    #[derive(::serde::Deserialize)]
    pub struct ThingsGetPointByIdPath {
        pub id: String,
    }
    #[derive(::serde::Deserialize)]
    struct ThingsGetPointByIdRequest {
        id: String,
        if_none_match: Option<String>,
    }
    #[allow(clippy::manual_async_fn, unused_mut)]
    impl<S> ::xidl_rust_axum::axum::extract::FromRequest<S> for ThingsGetPointByIdRequest
    where
        S: Send + Sync,
    {
        type Rejection = ::xidl_rust_axum::Error;
        fn from_request(
            req: ::xidl_rust_axum::axum::extract::Request,
            state: &S,
        ) -> impl ::core::future::Future<Output = Result<Self, Self::Rejection>> + Send {
            async move {
                let (mut parts, body) = req.into_parts();
                let _ = &body;
                let _ = state;
                let ::xidl_rust_axum::axum::extract::Path(xidl_path) = <::xidl_rust_axum::axum::extract::Path<
                    ThingsGetPointByIdPath,
                > as ::xidl_rust_axum::axum::extract::FromRequestParts<
                    S,
                >>::from_request_parts(&mut parts, state)
                    .await
                    .map_err(|err| ::xidl_rust_axum::Error::new(400, err.to_string()))?;
                let ThingsGetPointByIdPath { id } = xidl_path;
                let xidl_headers = &parts.headers;
                let _ = xidl_headers;
                let if_none_match: Option<String> = match xidl_headers
                    .get("If-None-Match")
                {
                    Some(header_value) => {
                        let header_str = header_value
                            .to_str()
                            .map_err(|err| ::xidl_rust_axum::Error::new(
                                400,
                                format!("{err:?}"),
                            ))?;
                        Some(header_str.to_string())
                    }
                    None => None,
                };
                Ok(Self { id, if_none_match })
            }
        }
    }
    pub struct ThingsServer<T> {
        inner: ::std::sync::Arc<T>,
    }
    #[allow(non_snake_case)]
    impl<T> ThingsServer<T>
    where
        T: Things + Send + Sync + 'static,
    {
        pub fn new(inner: T) -> Self {
            Self {
                inner: ::std::sync::Arc::new(inner),
            }
        }
        pub fn from_arc(inner: ::std::sync::Arc<T>) -> Self {
            Self { inner }
        }
        pub fn router(self) -> xidl_rust_axum::axum::Router {
            let _svc = self.inner;
            xidl_rust_axum::axum::Router::new()
                .route("/points", xidl_rust_axum::axum::routing::get(Self::get_point))
                .route(
                    "/points/{id}",
                    xidl_rust_axum::axum::routing::get(Self::get_point_by_id),
                )
                .with_state(_svc)
        }
        #[allow(
            clippy::let_and_return,
            clippy::needless_return,
            clippy::useless_conversion,
            unused_mut,
            unreachable_code,
            clippy::let_unit_value,
            unused_variables
        )]
        async fn get_point(
            ::xidl_rust_axum::axum::extract::State(
                svc,
            ): ::xidl_rust_axum::axum::extract::State<::std::sync::Arc<T>>,
            headers: ::xidl_rust_axum::axum::http::HeaderMap,
            uri: ::xidl_rust_axum::axum::http::Uri,
        ) -> ::xidl_rust_axum::Result<::xidl_rust_axum::axum::response::Response> {
            let _ = &headers;
            if !xidl_rust_axum::http::accepts_media_type(&headers, "application/json") {
                return Err(xidl_rust_axum::Error::not_acceptable());
            }
            let mut resp = match svc.get_point().await {
                Ok(resp_value) => {
                    let mut resp = {
                        let body_value: __xidl_out_Things::demo_Point = resp_value
                            .into();
                        let _ = &body_value;
                        let body = xidl_rust_axum::SerializeFactory::new(
                                "application/json",
                            )
                            .to_vec(&body_value)?;
                        ::xidl_rust_axum::axum::response::Response::builder()
                            .status(
                                ::xidl_rust_axum::axum::http::StatusCode::from_u16(200)
                                    .unwrap(),
                            )
                            .header(
                                ::xidl_rust_axum::axum::http::header::CONTENT_TYPE,
                                "application/json",
                            )
                            .body(::xidl_rust_axum::axum::body::Body::from(body))
                            .map_err(|err| xidl_rust_axum::Error::new(
                                500,
                                format!("{err:?}"),
                            ))?
                    };
                    resp
                }
                Err(err) => {
                    ::xidl_rust_axum::axum::response::IntoResponse::into_response(err)
                }
            };
            Ok(resp)
        }
        #[allow(
            clippy::let_and_return,
            clippy::needless_return,
            clippy::useless_conversion,
            unused_mut,
            unreachable_code,
            clippy::let_unit_value,
            unused_variables
        )]
        async fn get_point_by_id(
            ::xidl_rust_axum::axum::extract::State(
                svc,
            ): ::xidl_rust_axum::axum::extract::State<::std::sync::Arc<T>>,
            headers: ::xidl_rust_axum::axum::http::HeaderMap,
            uri: ::xidl_rust_axum::axum::http::Uri,
            request: ThingsGetPointByIdRequest,
        ) -> ::xidl_rust_axum::Result<::xidl_rust_axum::axum::response::Response> {
            let _ = &headers;
            if !xidl_rust_axum::http::accepts_media_type(&headers, "application/json") {
                return Err(xidl_rust_axum::Error::not_acceptable());
            }
            let ThingsGetPointByIdRequest { id, if_none_match } = request;
            let id: String = id;
            let if_none_match: Option<String> = if_none_match;
            let mut resp = match svc.get_point_by_id(id, if_none_match).await {
                Ok(resp_value) => {
                    let mut resp = {
                        let body_value: __xidl_out_Things::demo_Point = resp_value
                            .into();
                        let _ = &body_value;
                        let body = xidl_rust_axum::SerializeFactory::new(
                                "application/json",
                            )
                            .to_vec(&body_value)?;
                        ::xidl_rust_axum::axum::response::Response::builder()
                            .status(
                                ::xidl_rust_axum::axum::http::StatusCode::from_u16(200)
                                    .unwrap(),
                            )
                            .header(
                                ::xidl_rust_axum::axum::http::header::CONTENT_TYPE,
                                "application/json",
                            )
                            .body(::xidl_rust_axum::axum::body::Body::from(body))
                            .map_err(|err| xidl_rust_axum::Error::new(
                                500,
                                format!("{err:?}"),
                            ))?
                    };
                    resp
                }
                Err(err) => {
                    ::xidl_rust_axum::axum::response::IntoResponse::into_response(err)
                }
            };
            Ok(resp)
        }
    }
    impl<T> xidl_rust_axum::Service for ThingsServer<T>
    where
        T: Things + Send + Sync + 'static,
    {
        fn into_router(self) -> xidl_rust_axum::axum::Router {
            self.router()
        }
    }
    pub struct ThingsClient {
        client: ::xidl_rust_axum::Client,
    }
    #[allow(non_snake_case)]
    impl ThingsClient {
        pub fn new(base_url: impl Into<String>) -> Self {
            Self {
                client: ::xidl_rust_axum::Client::new(base_url),
            }
        }
        pub fn with_http(
            base_url: impl Into<String>,
            http: ::xidl_rust_axum::reqwest::Client,
        ) -> Self {
            Self {
                client: ::xidl_rust_axum::Client::with_http(base_url, http),
            }
        }
    }
    #[allow(non_snake_case)]
    impl ThingsClient {
        #[allow(
            clippy::useless_conversion,
            unused_mut,
            unreachable_code,
            unused_variables
        )]
        pub async fn get_point(&self) -> Result<Point, xidl_rust_axum::Error> {
            let path = "/points".to_string();
            let mut req = self
                .client
                .http()
                .request(xidl_rust_axum::reqwest::Method::GET, self.client.url(&path))
                .build()
                .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
            req.headers_mut()
                .insert(
                    xidl_rust_axum::reqwest::header::ACCEPT,
                    xidl_rust_axum::reqwest::header::HeaderValue::from_str(
                            "application/json",
                        )
                        .map_err(|err| xidl_rust_axum::Error::new(
                            400,
                            format!("{err:?}"),
                        ))?,
                );
            let auth_target = &self.client;
            let _ = auth_target;
            let resp = self
                .client
                .http()
                .execute(req)
                .await
                .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
            if resp.status().is_success() {
                let body = resp
                    .bytes()
                    .await
                    .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
                let body: __xidl_in_Things::demo_Point = xidl_rust_axum::DeserializeFactory::new(
                        "application/json",
                    )
                    .from_slice(&body)?;
                Ok(body.into())
            } else {
                let status = resp.status();
                let body = resp.json::<xidl_rust_axum::ErrorBody>().await.ok();
                Err(xidl_rust_axum::Error::from_http_response(status, body))
            }
        }
        #[allow(
            clippy::useless_conversion,
            unused_mut,
            unreachable_code,
            unused_variables
        )]
        pub async fn get_point_by_id(
            &self,
            id: String,
            if_none_match: Option<String>,
        ) -> Result<Point, xidl_rust_axum::Error> {
            let path = "/points/{id}".to_string();
            let path = path.replace("{id}", &id.to_string());
            let mut req = self
                .client
                .http()
                .request(xidl_rust_axum::reqwest::Method::GET, self.client.url(&path))
                .build()
                .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
            req.headers_mut()
                .insert(
                    xidl_rust_axum::reqwest::header::ACCEPT,
                    xidl_rust_axum::reqwest::header::HeaderValue::from_str(
                            "application/json",
                        )
                        .map_err(|err| xidl_rust_axum::Error::new(
                            400,
                            format!("{err:?}"),
                        ))?,
                );
            let header_name = xidl_rust_axum::reqwest::header::HeaderName::from_bytes(
                    "If-None-Match".as_bytes(),
                )
                .map_err(|err| xidl_rust_axum::Error::new(400, format!("{err:?}")))?;
            let header_value_str = if_none_match;
            let header_value = xidl_rust_axum::reqwest::header::HeaderValue::from_str(
                    &header_value_str,
                )
                .map_err(|err| xidl_rust_axum::Error::new(400, format!("{err:?}")))?;
            req.headers_mut().insert(header_name, header_value);
            let auth_target = &self.client;
            let _ = auth_target;
            let resp = self
                .client
                .http()
                .execute(req)
                .await
                .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
            if resp.status().is_success() {
                let body = resp
                    .bytes()
                    .await
                    .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
                let body: __xidl_in_Things::demo_Point = xidl_rust_axum::DeserializeFactory::new(
                        "application/json",
                    )
                    .from_slice(&body)?;
                Ok(body.into())
            } else {
                let status = resp.status();
                let body = resp.json::<xidl_rust_axum::ErrorBody>().await.ok();
                Err(xidl_rust_axum::Error::from_http_response(status, body))
            }
        }
    }
}
